tests/suite/fail/generated/types/fail_mod_string_string.ny
fn main() {
    let _ = "a" % "a" //~ ERROR type mismatch in `arithmetic` operation
}
